--- a/translations/messages.ja.po
+++ b/translations/messages.ja.po
@@ -2208,7 +2208,7 @@ msgstr "ドキュメントも追加されます"
 msgid "If you want to export a course containing a test, you have to make sure the corresponding tests are included in the export, so you have to select them in the list of tests."
 msgstr "テストを含むコースをエクスポートする場合、対応するテストをエクスポートに含める必要があるので、テスト一覧で選択してください。"
 
-msgid "The app/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
+msgid "The var/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
 msgstr ""
 
 msgid "Target course"
@@ -17283,12 +17283,6 @@ msgstr ""
 msgid "Photo retouching"
 msgstr "写真を修正"
 
-msgid "Enable external Pixlr services"
-msgstr "外部の Pixlr サービスを有効にする"
-
-msgid "Pixlr allow you to edit, adjust and filter your photos with features similar to Photoshop. It is the ideal complement to process images based on bitmaps"
-msgstr "Pixlr では Photoshop と同様の機能で写真の編集、調整とフィルター処理ができます。ビットマップに基づいて画像の最適な補間処理を行います"
-
 msgid "The <i>%s</i> promotion has been archived. This action has the consequence of making invisible all sessions registered into this promotion. You can undo this by unarchiving this promotion."
 msgstr ""
 
@@ -18324,16 +18318,16 @@ msgstr "フォーラム カテゴリ"
 msgid "Cleanup of cache and temporary files"
 msgstr "アーカイブ ディレクトリのクリーンアップ"
 
-msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its app/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
+msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its var/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
 msgstr ""
 
 msgid "Proceed with cleanup"
 msgstr ""
 
-msgid "The app/cache/ directory cleanup has been executed successfully."
+msgid "The var/cache/ directory cleanup has been executed successfully."
 msgstr ""
 
-msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
+msgid "For some reason, the var/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/var/cache/ directory, except the .htaccess file. On Linux: # find var/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
 msgstr ""
 
 msgid "Enable start time"
