--- a/translations/messages.el.po
+++ b/translations/messages.el.po
@@ -2152,7 +2152,7 @@ msgstr "Θα προστεθούν και Έγγραφα"
 msgid "If you want to export a course containing a test, you have to make sure the corresponding tests are included in the export, so you have to select them in the list of tests."
 msgstr "Αν θέλετε να εξάγετε μια σειρά μαθημάτων που περιέχει μια άσκηση, θα πρέπει να βεβαιωθείτε ότι οι αντίστοιχες ασκήσεις συμπεριλαμβάνονται στην εξαγωγή καιθα πρέπει να τις επιλέξετε από τον κατάλογο ασκήσεων."
 
-msgid "The app/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
+msgid "The var/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
 msgstr "Ο φάκελος αρχείων που χρησιμοποιείται από αυτό το εργαλείο, δεν είναι εγγράψιμος. Παρακαλώ απευθυνθείτε στον διαχειριστή της πλατφόρμας."
 
 msgid "Target course"
@@ -17228,12 +17228,6 @@ msgstr "Μετονομασία και Σχολιασμός"
 msgid "Photo retouching"
 msgstr ""
 
-msgid "Enable external Pixlr services"
-msgstr ""
-
-msgid "Pixlr allow you to edit, adjust and filter your photos with features similar to Photoshop. It is the ideal complement to process images based on bitmaps"
-msgstr ""
-
 msgid "The <i>%s</i> promotion has been archived. This action has the consequence of making invisible all sessions registered into this promotion. You can undo this by unarchiving this promotion."
 msgstr ""
 
@@ -18269,16 +18263,16 @@ msgstr "Κατηγορίες Forum"
 msgid "Cleanup of cache and temporary files"
 msgstr ""
 
-msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its app/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
+msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its var/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
 msgstr ""
 
 msgid "Proceed with cleanup"
 msgstr ""
 
-msgid "The app/cache/ directory cleanup has been executed successfully."
+msgid "The var/cache/ directory cleanup has been executed successfully."
 msgstr ""
 
-msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
+msgid "For some reason, the var/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/var/cache/ directory, except the .htaccess file. On Linux: # find var/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
 msgstr ""
 "Για κάποιο λόγο, ο κατάλογος chamilo/var/cache/ δεν μπόρεσε να καθαριστεί. "
 "Παρακαλώ καθαρίστε τον χειροκίνητα: συνδεθείτε στον διακομιστή και διαγράψτε "
