--- a/translations/messages.pt.po
+++ b/translations/messages.pt.po
@@ -2152,7 +2152,7 @@ msgstr "Os documentos também serão adicionados"
 msgid "If you want to export a course containing a test, you have to make sure the corresponding tests are included in the export, so you have to select them in the list of tests."
 msgstr "Se desejar exportar um curso juntamente com um teste/exercício, deverá certificar-se de que os testes/exercícios correspondentes estão incluídos na exportação, para isso deverá selecioná-los da lista de testes/exercícios."
 
-msgid "The app/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
+msgid "The var/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
 msgstr "O directório de ficheiros utilizado por esta aplicação, não se encontra editável. Por favor, contacte o administrador da plataforma/sistema."
 
 msgid "Target course"
@@ -17228,12 +17228,6 @@ msgstr "Renomeie e comente"
 msgid "Photo retouching"
 msgstr "Retoque fotográfico"
 
-msgid "Enable external Pixlr services"
-msgstr "Ativar serviços externos do Pixlr"
-
-msgid "Pixlr allow you to edit, adjust and filter your photos with features similar to Photoshop. It is the ideal complement to process images based on bitmaps"
-msgstr "Pixlr permitem editar, ajustar e filtrar as suas fotos com características semelhantes ao Photoshop. É o complemento ideal para processar imagens com base em bitmaps"
-
 msgid "The <i>%s</i> promotion has been archived. This action has the consequence of making invisible all sessions registered into this promotion. You can undo this by unarchiving this promotion."
 msgstr "A promoção %s foi arquivado. Esta ação tem o efeito de tornar invisíveis todas as sessões registradas para esta promoção. Você pode desfazer esta promoção mudança desarquivando."
 
@@ -18269,16 +18263,16 @@ msgstr "Categorias do fórum"
 msgid "Cleanup of cache and temporary files"
 msgstr "Limpar a pasta de archive"
 
-msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its app/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
+msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its var/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
 msgstr "Chamilo salva uma cópia da maioria dos arquivos temporários que gera (para backups , exportações, cópias , etc) em seu arquivo/diretório. Depois de um tempo, isso pode adicionar até uma quantidade muito grande de espaço em disco a ser utilizado para nada. Clique no botão abaixo para limpar o seu arquivo diretório. Esta operação deve ser automatizada por um processo cron, mas se isso não for possível, você pode vir a esta página regularmente para remover todos os arquivos temporários do diretório."
 
 msgid "Proceed with cleanup"
 msgstr "Prosseguir com a limpeza"
 
-msgid "The app/cache/ directory cleanup has been executed successfully."
+msgid "The var/cache/ directory cleanup has been executed successfully."
 msgstr ""
 
-msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
+msgid "For some reason, the var/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/var/cache/ directory, except the .htaccess file. On Linux: # find var/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
 msgstr ""
 
 msgid "Enable start time"
