--- a/translations/messages.tl.po
+++ b/translations/messages.tl.po
@@ -2138,7 +2138,7 @@ msgstr "Ang mga dokumento ay idadagdag din"
 msgid "If you want to export a course containing a test, you have to make sure the corresponding tests are included in the export, so you have to select them in the list of tests."
 msgstr "Kung nais mo na mag-export ng isang kurso na naglalaman ng pagsusulit, kailangan mong tiyakin na ang mga katumbas na pagsusulit ay kabilang sa export, kung kaya"
 
-msgid "The app/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
+msgid "The var/cache/ directory, used by this tool, is not writeable. Please contact your platform administrator."
 msgstr ""
 
 msgid "Target course"
@@ -17213,12 +17213,6 @@ msgstr ""
 msgid "Photo retouching"
 msgstr "Pagre-retouch ng larawan"
 
-msgid "Enable external Pixlr services"
-msgstr "Pagganahin ang mga serbisyo sa external Pixlr"
-
-msgid "Pixlr allow you to edit, adjust and filter your photos with features similar to Photoshop. It is the ideal complement to process images based on bitmaps"
-msgstr "Pinapayagan ka ng Pixlr na mag-edit, mag-adjust at mag-filter ng iyong mga larawan na mayroong tampok tulad ng Photoshop. Ito ang tamang-tamang kapupunan sa pagproseso ng mga larawan batay sa mga bitmap"
-
 msgid "The <i>%s</i> promotion has been archived. This action has the consequence of making invisible all sessions registered into this promotion. You can undo this by unarchiving this promotion."
 msgstr ""
 
@@ -18254,16 +18248,16 @@ msgstr "Mga Kategorya ng Forum"
 msgid "Cleanup of cache and temporary files"
 msgstr "I-archive cleanup ng direktoryo"
 
-msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its app/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
+msgid "Chamilo keeps a copy of most of the temporary files it generates (for backups, exports, copies, etc) into its var/cache/ directory. After a while, this can add up to a very large amount of disk space being used for nothing. Click the button below to clean your archive directory up. This operation should be automated by a cron process, but if this is not possible, you can come to this page regularly to remove all temporary files from the directory."
 msgstr ""
 
 msgid "Proceed with cleanup"
 msgstr ""
 
-msgid "The app/cache/ directory cleanup has been executed successfully."
+msgid "The var/cache/ directory cleanup has been executed successfully."
 msgstr ""
 
-msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
+msgid "For some reason, the var/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/var/cache/ directory, except the .htaccess file. On Linux: # find var/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
 msgstr ""
 
 msgid "Enable start time"
